--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@ body {
 .main {
   height: 100vh;
   width: 100%;
-  background-image: url(./images/landing-page-path-mobile.svg);
+  background-image: url(./images/mobile-main.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom;
@@ -34,20 +34,20 @@ body {
     background-color: #ccccff;
     color: white;
     padding: 16px 20px;
-    border-radius: 24px;
+    border-radius: 32px;
     font-size: 18px;
     cursor: pointer;
   }
 
   #virus1 {
     position: absolute;
-    bottom: 0%;
-    left: 55%;
+    bottom: -2%;
+    left: calc(100% - 130px);
   }
 
   #virus2 {
     position: absolute;
-    top: -15%;
-    right: 40%;
+    top: -12%;
+    right: calc(100% - 200px);
   }
 }
