--- a/src/App.scss
+++ b/src/App.scss
@@ -51,3 +51,49 @@ body {
     right: calc(100% - 200px);
   }
 }
+
+.searching {
+  height: 100vh;
+  width: 100%;
+  background-image: url(./images/mobile-searching.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  h2 {
+    font-size: 32px;
+    margin-bottom: 40px;
+    margin-top: 40px;
+  }
+
+  .input-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: 10px solid #ccccff;
+    border-radius: 56px;
+    width: 250px;
+    height: 60px;
+
+    input {
+      outline: none;
+      border: none;
+      font-family: myriad-pro, sans-serif;
+      font-size: 14px;
+    }
+
+    #search-icon {
+      font-size: 26px;
+    }
+  }
+
+  #virus3 {
+    position: absolute;
+    left: calc(100% - 200px);
+    top: -13%;
+  }
+}
