toggle between pages

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,11 @@
 body {
   overflow: hidden;
 }
+
+.link {
+  text-decoration: none;
+  color: white;
+}
 .main {
   height: 100vh;
   width: 100%;
@@ -95,5 +100,12 @@ body {
     position: absolute;
     left: calc(100% - 200px);
     top: -13%;
+  }
+
+  .arrow-back {
+    position: absolute;
+    font-size: 42px;
+    top: 10px;
+    left: 10px;
   }
 }
