--- a/src/App.scss
+++ b/src/App.scss
@@ -10,9 +10,14 @@
   font-family: myriad-pro, sans-serif;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
 html,
 body {
   overflow-x: hidden;
+  overflow-y: hidden;
+  color: #2d3631;
 }
 
 body {
@@ -23,6 +28,14 @@ body {
   text-decoration: none;
   color: white;
 }
+
+.arrow-back {
+  position: absolute;
+  font-size: 42px;
+  top: 10px;
+  left: 10px;
+}
+
 .main {
   height: 100vh;
   width: 100%;
@@ -47,6 +60,7 @@ body {
     border-radius: 32px;
     font-size: 18px;
     cursor: pointer;
+    font-family: myriad-pro, sans-serif;
   }
 
   #virus1 {
@@ -101,16 +115,52 @@ body {
     }
   }
 
+  .suggestions {
+    max-height: 165px;
+    overflow-y: scroll;
+    width: 200px;
+
+    div {
+      padding: 15px;
+      font-size: 18px;
+      cursor: pointer;
+      font-family: myriad-pro, sans-serif;
+    }
+  }
+
   #virus3 {
     position: absolute;
     left: calc(100% - 200px);
     top: -13%;
   }
+}
 
-  .arrow-back {
+.results {
+  text-align: center;
+  height: 100vh;
+  width: 100%;
+  background-image: url(./images/mobile-main.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+
+  h2 {
+    font-size: 50px;
+    padding-top: 70px;
+    margin-bottom: 40px;
+  }
+
+  h3 {
+    font-size: 28px;
+  }
+  p {
+    margin-bottom: 30px;
+    font-size: 20px;
+    font-family: myriad-pro, sans-serif;
+  }
+
+  #virus4 {
     position: absolute;
-    font-size: 42px;
-    top: 10px;
-    left: 10px;
+    right: calc(100% - 200px);
   }
 }
